# parsing-exercise

./: README.md
files/: input001.json  input002.json  input003.json
solutions/go/: README.md  go.mod  go.sum
solutions/go/cmd/: go-parser.go
solutions/go/pkg/io/: reader.go
solutions/go/pkg/parse/: parse.go
solutions/go/pkg/parse/a/: input.go  input_internal_test.go  input_test.go
solutions/go/pkg/parse/b/: input.go  input_internal_test.go  input_test.go
solutions/go/pkg/parse/common/: bmi.go  bmi_test.go
solutions/go/pkg/parse/output/: output.go  output_internal_test.go
solutions/go/pkg/workflow/: process.go  read.go  run.go  write.go
solutions/python/: pyproject.toml
solutions/python/src/parse/: input.py  io.py  output.py  run.py
solutions/python/tests/parse/: test_input.py  test_output.py
