[project]
name = "parsing-exercise"
version = "0.1.0"
description = "Python solution to parsing-exercise"
authors = [
    {name = "Mimi Wang", email = "mimikwang@gmail.com"}
]
requires-python=">=3.10"

dependencies = [
    "pydantic==1.10.2",
    "pytest==7.1.3",
]

[project.scripts]
parse = "parse:run.run"

[build-system]
requires = [
    "setuptools >= 49.2.1",
]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]